[tool.poetry]
name = "starfish-api-client"
version = "0.1.0"
description = ""
authors = ["cbarne02 <christopher.barnett@tufts.edu>"]
packages = [{include = "starfish_api_client"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
