[project]
name = "starfish-api-client"
version = "0.1.0"
description = "client for the starfish api"
readme = "README.md"
authors = [{name="Chris Barnett", email="Christopher.Barnett@tufts.edu"}]
dependencies = [
    "requests>=2.31.0"
]
requires-python = ">= 3.11"

[build-system]
requires = [
    "setuptools >= 61.0",
]
build-backend = "setuptools.build_meta"
